<resources>
    <string name="ipAddress">10.20.206.103</string>
    <string name="app_name">VGS4MSC</string>
    <string name="select">Select USB Web Camera</string>
    <string name="camera">Camera</string>
    <string name="refresh">Refresh</string>
    <string name="no_device">No USB camera found</string>
    <string name="start">Start/Stop Streaming</string>
    <string name="flash">Flash</string>
    <string name="video">Video Settings</string>
    <string name="save">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="uri">URI</string>
    <string name="password_hint">Leave empty if not needed</string>
    <string name="username_hint">Leave empty if not needed</string>
    <string name="default_bitrate">0 kbps</string>
    <string name="default_stream">rtsp://wowzaipaddress:1935/live/test.stream</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="registering_message">the token is on the way</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <!-- Message Setting -->
    <string name="label_left_text">Left Command</string>
    <string name="label_right_text">Right Command</string>
    <string name="label_forward_text">Forward Command</string>
    <string name="label_stop_text">Stop Command</string>
    <string name="save_setting">Save</string>
    <string name="label_duty_cycle">Duty Cycle</string>
    <string name="label_frequency">Frequency</string>
    <string name="set_setting">Set</string>
    <!-- Message Setting -->
    <string name="LinphoneBtnString">Linphone</string>
    <!---->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="ConnectionBtnString">BLE Connection</string>
    <string name="label_command">Command</string>
    <string name="MessageSettingBtnString">Message Setting</string>
</resources>
