<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button android:layout_width="80dp"
                  android:layout_height="40dp"
                  android:layout_margin="2dp"
                  android:id="@+id/hexa_binary_button"/>
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_left_text"
                  android:textSize="18sp"/>
        <Button android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:id="@+id/set_setting_left"
                android:tag="left"
                android:layout_alignParentRight="true"
                android:text="@string/set_setting"/>
    </RelativeLayout>
    <EditText android:id="@+id/left_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:tag="left"
              android:textSize="18sp"/>
    <Space android:layout_width="5dp"
           android:layout_height="wrap_content"/>
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_right_text"
                  android:textSize="18sp"/>
        <Button android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:id="@+id/set_setting_right"
                android:tag="right"
                android:layout_alignParentRight="true"
                android:text="@string/set_setting"/>
    </RelativeLayout>
    <EditText android:id="@+id/right_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:tag="right"
              android:textSize="18sp"/>
    <Space android:layout_width="5dp"
           android:layout_height="wrap_content"/>
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_forward_text"
                  android:textSize="18sp"/>
        <Button android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:id="@+id/set_setting_forward"
                android:tag="forward"
                android:layout_alignParentRight="true"
                android:text="@string/set_setting"/>
    </RelativeLayout>
    <EditText android:id="@+id/forward_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:tag="forward"
              android:textSize="18sp"/>
    <Space android:layout_width="5dp"
           android:layout_height="wrap_content"/>
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_stop_text"
                  android:textSize="18sp"/>
        <Button android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:id="@+id/set_setting_stop"
                android:tag="stop"
                android:layout_alignParentRight="true"
                android:text="@string/set_setting"/>
    </RelativeLayout>
    <EditText android:id="@+id/stop_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:tag="stop"
              android:textSize="18sp"/>
    <Space android:layout_width="5dp"
           android:layout_height="wrap_content"/>
    <Button android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:id="@+id/save_setting"
            android:text="@string/save_setting"/>
</LinearLayout>